--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,18 @@ Primary Color : #0056d2
 .coursera-logo-footer{
    width: 180px;
 }
-
+.social-icon a{
+   margin:0px 15px;
+}
+.social-icon i{
+   background-color: #0dcaf0;
+   border-radius: 50%;
+   width: 50px;
+   height: 50px;
+   padding-top: 13px;
+   font-size: 24px;
+   color: #0056d2;
+}
 /* CSS Document */
 .heading-title h2 {
     font-weight: 300;
